--- a/chartmath303derivative2.ipynb
+++ b/chartmath303derivative2.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "chartmath303derivative2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP/55+DPS0FwMqsEH3a9NxO",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOw0qSdGBtjI3u2ydHX6+tN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -152,6 +153,38 @@
         "\n",
         "$(x^n)' = (x^{-m})' = \\left(\\frac 1 {x^m}\\right)'= -\\frac{(x^m)'}{(x^m)^2} = - \\frac {mx^{m-1}}{x^{2m}} = -mx^{-m-1} = nx^{n-1}$\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "11GABX9lCXYF"
+      },
+      "source": [
+        "---\n",
+        "合成関数の導関数\n",
+        "\n",
+        "$y=f(u)$ が $u$ の関数として微分可能、$u=g(x)$ が $x$ の関数として微分可能である時、関数 $y=f(u),\\;u=g(x)$ の合成関数 $y=f(g(x))$ も $x$ の関数として微分可能である。\n",
+        "\n",
+        "$\\qquad \\displaystyle \\frac {dy}{dx} = \\frac {dy}{du} \\cdot \\frac {du}{dx}$\n",
+        "\n",
+        "逆関数の微分法\n",
+        "\n",
+        "微分可能な関数 $y=f(u)$ の逆関数 $f^{-1}(x)$ が存在する時、\n",
+        "\n",
+        "$\\qquad \\displaystyle \\frac {dy}{dx} = \\frac {1}{\\displaystyle \\frac {dx}{dy}}$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-hvfS-jbFHc5"
+      },
+      "source": [
+        "---\n",
+        "考察\n",
+        "\n",
+        "一般に、"
       ]
     }
   ]
