--- a/chartmath303derivative2.ipynb
+++ b/chartmath303derivative2.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmath303derivative2.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMWR8XoidQAz5B0vQrBcJP1",
+      "authorship_tag": "ABX9TyNOu2TN9A6/NQaESmatRif+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -242,12 +242,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FlFyBvPdnYuW",
-        "outputId": "108538c8-a14f-409f-82dc-4655decb33b4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 60
-        }
+        },
+        "id": "FlFyBvPdnYuW",
+        "outputId": "108538c8-a14f-409f-82dc-4655decb33b4"
       },
       "source": [
         "from sympy.abc import *\n",
@@ -287,12 +287,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rU0jFMgCn1Im",
-        "outputId": "460a567c-2ff7-4bea-c329-8b0c2ec70ab4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 82
-        }
+        },
+        "id": "rU0jFMgCn1Im",
+        "outputId": "460a567c-2ff7-4bea-c329-8b0c2ec70ab4"
       },
       "source": [
         "from sympy.abc import *\n",
@@ -345,12 +345,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yW9gRnx7oY_3",
-        "outputId": "65448618-4368-4142-aa78-c87f09dfd5c8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 123
-        }
+        },
+        "id": "yW9gRnx7oY_3",
+        "outputId": "65448618-4368-4142-aa78-c87f09dfd5c8"
       },
       "source": [
         "from sympy.abc import *\n",
@@ -403,12 +403,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "OXNWIc5ksC1o",
-        "outputId": "1c1d366e-5c42-4acb-936d-f9c2d5d6cd6e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 134
-        }
+        },
+        "id": "OXNWIc5ksC1o",
+        "outputId": "1c1d366e-5c42-4acb-936d-f9c2d5d6cd6e"
       },
       "source": [
         "from sympy.abc import *\n",
@@ -473,13 +473,277 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wis_M3CntaDZ"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 66
+        },
+        "id": "wis_M3CntaDZ",
+        "outputId": "2ed8e23e-87c5-4b2b-fd86-f01855870e3b"
       },
       "source": [
-        ""
+        "from sympy.abc import *\n",
+        "from sympy import *\n",
+        "y = (x**2+1)**3\n",
+        "display(y)\n",
+        "display(diff(y)) # 合成関数の微分"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left(x^{2} + 1\\right)^{3}$",
+            "text/plain": [
+              "(x**2 + 1)**3"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle 6 x \\left(x^{2} + 1\\right)^{2}$",
+            "text/plain": [
+              "6*x*(x**2 + 1)**2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "00cPkiQqxIUg",
+        "outputId": "aedd095f-adea-48db-e093-6204267f127d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 99
+        }
+      },
+      "source": [
+        "from sympy.abc import *\n",
+        "from sympy import *\n",
+        "y = 1 / (2*x-3)**2\n",
+        "display(y)\n",
+        "display(diff(y))"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\frac{1}{\\left(2 x - 3\\right)^{2}}$",
+            "text/plain": [
+              "(2*x - 3)**(-2)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle - \\frac{4}{\\left(2 x - 3\\right)^{3}}$",
+            "text/plain": [
+              "-4/(2*x - 3)**3"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zI8q7YTFx-tB",
+        "outputId": "7cdc7321-49ec-465c-8300-21517f7ec807",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 84
+        }
+      },
+      "source": [
+        "from sympy.abc import *\n",
+        "from sympy import *\n",
+        "y =(3*x+1)**2*(x-2)\n",
+        "display(y)\n",
+        "display(diff(y))\n",
+        "display(simplify(diff(y)))"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left(x - 2\\right) \\left(3 x + 1\\right)^{2}$",
+            "text/plain": [
+              "(x - 2)*(3*x + 1)**2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left(x - 2\\right) \\left(18 x + 6\\right) + \\left(3 x + 1\\right)^{2}$",
+            "text/plain": [
+              "(x - 2)*(18*x + 6) + (3*x + 1)**2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left(3 x + 1\\right) \\left(9 x - 11\\right)$",
+            "text/plain": [
+              "(3*x + 1)*(9*x - 11)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rYgPoOpkycgj",
+        "outputId": "6dcee0b9-b466-432b-8468-4e287b762420",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 139
+        }
+      },
+      "source": [
+        "from sympy.abc import *\n",
+        "from sympy import *\n",
+        "y =(x-1)/(x**2+1)**2\n",
+        "display(y)\n",
+        "display(diff(y))\n",
+        "display(cancel(diff(y)))"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\frac{x - 1}{\\left(x^{2} + 1\\right)^{2}}$",
+            "text/plain": [
+              "(x - 1)/(x**2 + 1)**2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle - \\frac{4 x \\left(x - 1\\right)}{\\left(x^{2} + 1\\right)^{3}} + \\frac{1}{\\left(x^{2} + 1\\right)^{2}}$",
+            "text/plain": [
+              "-4*x*(x - 1)/(x**2 + 1)**3 + (x**2 + 1)**(-2)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\frac{- 3 x^{2} + 4 x + 1}{x^{6} + 3 x^{4} + 3 x^{2} + 1}$",
+            "text/plain": [
+              "(-3*x**2 + 4*x + 1)/(x**6 + 3*x**4 + 3*x**2 + 1)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3IGRonmNy4Km"
+      },
+      "source": [
+        "---\n",
+        "基本例題 49 p.86 (1)\n",
+        "\n",
+        "$(x^3)'=3x^2,\\;\\; \\displaystyle\\frac{dy}{dx} =\\frac{1}{\\displaystyle\\frac{dx}{dy}}$ を用いて、$y=x^3$ の逆関数 $y=f(x)$ の導関数を求める。\n",
+        "\n",
+        "解:\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CmcDvxn4zxWF",
+        "outputId": "6ff1c285-8202-42a4-a0c4-bc90e63be2cc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 91
+        }
+      },
+      "source": [
+        "from sympy.abc import *\n",
+        "from sympy import *\n",
+        "y = x**(Rational(1,3))\n",
+        "display(y)\n",
+        "print()\n",
+        "display(diff(y))"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\sqrt[3]{x}$",
+            "text/plain": [
+              "x**(1/3)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\frac{1}{3 x^{\\frac{2}{3}}}$",
+            "text/plain": [
+              "1/(3*x**(2/3))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
     }
   ]
 }
