--- a/chartmath303derivative2.ipynb
+++ b/chartmath303derivative2.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmath303derivative2.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPtzFmIgvKusXeaMSy4/sVw",
+      "authorship_tag": "ABX9TyPZJudLWBZIDdYkS1gasAA1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -758,7 +758,118 @@
         "\n",
         "証明\n",
         "\n",
-        "$p$ が自然数 (正の整数) の時、"
+        "$p$ が自然数 (正の整数) の時、$y= x^{\\frac{1}{p}}$とすると、$x=y^p$\n",
+        "\n",
+        "よって、$\\displaystyle\\frac{dy}{dx}=\\frac{1}{\\frac{dy}{dx}}= \\frac{1}{py^{p-1}}=\\frac{1}{p}y^{1-p}=\\frac{1}{p}(x^{\\frac{1}{p}})^{1-p}=\\frac{1}{p}x^{(\\frac{1}{p}-1)}$\n",
+        "\n",
+        "$r$ が有理数の時、$r=\\frac{q}{p},\\; p$ は自然数 (正の整数)、$q$ は整数。\n",
+        "\n",
+        "$\\qquad \\displaystyle (x^{\\frac{q}{p}})'=  ((x^{\\frac{1}{p}})^q)'\n",
+        "= q(x^{\\frac{1}{p}})^{q-1}(x^{\\frac{1}{p}})'$\n",
+        "$\\qquad\\qquad\n",
+        "= q(x^{\\frac{1}{p}})^{q-1}\\cdot\\frac{1}{p}x^{\\frac{1}{p}-1}\n",
+        "= \\frac{q}{p}x^{\\frac{q}{p}-\\frac{1}{p}+\\frac{1}{p}-1}$\n",
+        "\n",
+        "ゆえに、$\\qquad \\displaystyle (x^{\\frac{q}{p}})'=\\frac{q}{p}x^{\\frac{q}{p}-1}$\n",
+        "\n",
+        "すなわち\n",
+        "\n",
+        "$(x^r)'=rx^{r-1}$\n",
+        "\n",
+        "証明終わり\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kJyQ6a9PdAP9",
+        "outputId": "b3e2f972-190f-4828-9997-561213935de9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 212
+        }
+      },
+      "source": [
+        "# 実験\n",
+        "from sympy.abc import *\n",
+        "from sympy import *\n",
+        "y = 1/ (x**2)**(Rational(1,3))\n",
+        "display(y)\n",
+        "print()\n",
+        "display(diff(y))\n",
+        "print()\n",
+        "x,y = symbols('x,y')\n",
+        "x = 1/sqrt(y**3)\n",
+        "display(x)\n",
+        "display(diff(x,y))\n"
+      ],
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\frac{1}{\\sqrt[3]{x^{2}}}$",
+            "text/plain": [
+              "(x**2)**(-1/3)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle - \\frac{2}{3 x \\sqrt[3]{x^{2}}}$",
+            "text/plain": [
+              "-2/(3*x*(x**2)**(1/3))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\frac{1}{\\sqrt{y^{3}}}$",
+            "text/plain": [
+              "1/sqrt(y**3)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle - \\frac{3}{2 y \\sqrt{y^{3}}}$",
+            "text/plain": [
+              "-3/(2*y*sqrt(y**3))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
       ]
     }
   ]
