--- a/python_exercise.ipynb
+++ b/python_exercise.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "python_exercise.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM9VfBF5pT3CmqtkRBR+iqc",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPgm0f5ucZ3lWj5U29Q0ASO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1795,7 +1796,7 @@
         "print(color_list_1.intersection(color_list_2))\n",
         "print(color_list_2.difference(color_list_1))\n"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1835,7 +1836,7 @@
         "area = b*h/2\n",
         "print(\"area = \", area)\n"
       ],
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1858,7 +1859,7 @@
       "source": [
         "!echo 20 40 | python temp.py"
       ],
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1904,7 +1905,7 @@
         "print(gcd(12, 17))\n",
         "print(gcd(4, 6))\n"
       ],
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1931,7 +1932,7 @@
         "print(numpy.gcd(12, 17))\n",
         "print(numpy.gcd(4, 6))"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1974,7 +1975,7 @@
         "print(gcd(12, 17))\n",
         "print(gcd(4, 6))"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2000,10 +2001,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "YQkNY63CVPa6",
-        "outputId": "468ef880-763c-4066-d395-0c99c36c4232",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "468ef880-763c-4066-d395-0c99c36c4232"
       },
       "source": [
         "def lcm(x, y):\n",
@@ -2022,7 +2023,7 @@
         "print(lcm(4, 6))\n",
         "print(lcm(15, 17))\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2038,10 +2039,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "dqA7NBOuVQH7",
-        "outputId": "fab61ea5-7dbb-4769-a853-bb29076a17b7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fab61ea5-7dbb-4769-a853-bb29076a17b7"
       },
       "source": [
         "# 別解\n",
@@ -2049,7 +2050,7 @@
         "print(lcm(4, 6))\n",
         "print(lcm(15, 17))"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2075,10 +2076,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "hmEBKhlvjLTO",
-        "outputId": "1358d7e6-8eeb-4df4-fde2-80d72756dd84",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1358d7e6-8eeb-4df4-fde2-80d72756dd84"
       },
       "source": [
         "def sum(x, y, z):\n",
@@ -2093,7 +2094,7 @@
         "print(sum(2, 2, 2))\n",
         "print(sum(1, 2, 3))\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2122,10 +2123,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Y8v1n_RYkID1",
-        "outputId": "aee4e243-1e0b-40c3-ecf8-fc6874a99047",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "aee4e243-1e0b-40c3-ecf8-fc6874a99047"
       },
       "source": [
         "def sum(x, y):\n",
@@ -2140,7 +2141,7 @@
         "print(sum(10, 12))\n",
         "\n"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2167,10 +2168,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "KZzxqU2_lDp0",
-        "outputId": "1e60b58d-730c-4bd2-ab64-aaa1296cc551",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1e60b58d-730c-4bd2-ab64-aaa1296cc551"
       },
       "source": [
         "def test_number5(x, y):\n",
@@ -2183,7 +2184,7 @@
         "print(test_number5(3, 2))\n",
         "print(test_number5(2, 2))\n"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2210,10 +2211,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "lpFWIv5wnZHD",
-        "outputId": "7d8e29e2-0b16-4479-c0c8-ad58d6735e84",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7d8e29e2-0b16-4479-c0c8-ad58d6735e84"
       },
       "source": [
         "# def add_numbers(a, b):\n",
@@ -2230,7 +2231,7 @@
         "print(add_numbers(10, 20))\n",
         "print(add_numbers(\"ten\",\"twenty\"))"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2246,10 +2247,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "bPXw2VoknZz7",
-        "outputId": "2e741ee1-dda5-448d-c1f1-3019ef5141f9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2e741ee1-dda5-448d-c1f1-3019ef5141f9"
       },
       "source": [
         "# 別解\n",
@@ -2262,7 +2263,7 @@
         "print(add_numbers(10, 20))\n",
         "print(add_numbers(\"ten\",\"twenty\"))"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2288,10 +2289,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "v5LnvERoo4IJ",
-        "outputId": "f1e8322c-3f83-4875-a4b3-2e672c22e517",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f1e8322c-3f83-4875-a4b3-2e672c22e517"
       },
       "source": [
         "def personal_details():\n",
@@ -2301,7 +2302,7 @@
         "\n",
         "personal_details()\n"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2318,10 +2319,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "XcbJwrXgo_4q",
-        "outputId": "88f3874a-2ac6-4492-93de-899860379390",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "88f3874a-2ac6-4492-93de-899860379390"
       },
       "source": [
         "# 別解 items(): キーと値のペアを取得する\n",
@@ -2330,7 +2331,7 @@
         "for item in simon.items():\n",
         "    print(item[0], \":\", item[1])"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2357,17 +2358,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "mQ_jQWtksedT",
-        "outputId": "bacb4071-a1f8-492a-f24a-bc36f3612e5c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bacb4071-a1f8-492a-f24a-bc36f3612e5c"
       },
       "source": [
         "x, y = 4, 3\n",
         "result = x * x + 2 * x * y + y * y\n",
         "print(\"({} + {}) ^ 2) = {}\".format(x, y, result))\n"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2392,10 +2393,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "L_Ry8VBAs38u",
-        "outputId": "dd48a6f8-3858-4017-da2b-2deda119c1fe",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "dd48a6f8-3858-4017-da2b-2deda119c1fe"
       },
       "source": [
         "amt = 10000\n",
@@ -2405,7 +2406,7 @@
         "future_value  = amt*((1+(0.01*int)) ** years)\n",
         "print(round(future_value,2))\n"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2430,10 +2431,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "PPobGcd7tb3F",
-        "outputId": "e5dcc5bf-e836-42dd-ae9f-4e673435749a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e5dcc5bf-e836-42dd-ae9f-4e673435749a"
       },
       "source": [
         "import math\n",
@@ -2443,7 +2444,7 @@
         "\n",
         "print(distance)\n"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2471,19 +2472,19 @@
       "cell_type": "code",
       "metadata": {
         "id": "qIHZObZYtkWp",
-        "outputId": "e77ae60a-38b3-476e-b559-edd13bc159d3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 314
-        }
+        },
+        "outputId": "e77ae60a-38b3-476e-b559-edd13bc159d3"
       },
       "source": [
         "from sympy.abc import *\n",
         "from sympy import *\n",
-        "y = sqrt(1 - x**2)\n",
+        "t = \n",
         "plot(y)"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
