--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "learnelixir.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNDoVsXyiSfb+lLNMa3G3ry",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMffX5KiOmnvrNn99QHVpNk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,9 +34,13 @@
         "id": "RfpoUurcVnZv"
       },
       "source": [
-        "メモ\n",
+        "# メモ\n",
         "\n",
-        "elixir を齧る。かじる"
+        "elixir を齧る。かじる。\n",
+        "\n",
+        "今のイメージ erlang 上で、erlang は 並行処理のためのシステムで、その erlang 上で理想的な言語を作ろうとしたら、ruby + clojure みたいな言語になった。\n",
+        "\n",
+        "Dave Thomas と まつもとゆきひろ が勧めているのだからいい言語なのだろう。\n"
       ]
     },
     {
@@ -46,6 +51,41 @@
       "source": [
         "* https://magazine.rubyist.net/articles/0054/0054-ElixirBook.html\n",
         "* https://elixirschool.com/ja/lessons/basics/basics/"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "THvpbkjdWs0Q"
+      },
+      "source": [
+        "%%capture\n",
+        "!sudo apt install elixir"
+      ],
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "S_s89E37Xroq",
+        "outputId": "28467e43-ae29-4cbe-e690-0a19c9b9943a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!elixir -e 'IO.puts 3 + 3'"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "6\n"
+          ],
+          "name": "stdout"
+        }
       ]
     }
   ]
