--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -6,7 +6,7 @@
       "name": "learnelixir.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM47dPKhH8ucOvJYClFwjwi",
+      "authorship_tag": "ABX9TyMGy3QJeh6dvrN5COyVDV8I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -772,10 +772,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "F6fHksfUVGu0",
-        "outputId": "74e0f4c8-e4f8-45da-8459-279b431402f2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "74e0f4c8-e4f8-45da-8459-279b431402f2"
       },
       "source": [
         "# リストの減算 \n",
@@ -787,7 +787,7 @@
         "!elixir -e 'IO.inspect  [2] -- [2.0]'\n",
         "!elixir -e 'IO.inspect  [2.0] -- [2.0]'"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -805,17 +805,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "H6BBZhUrWfq6",
-        "outputId": "e0828a87-78e0-480d-a5f7-9676de9443da",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e0828a87-78e0-480d-a5f7-9676de9443da"
       },
       "source": [
         "# head /tail\n",
         "!elixir -e 'IO.inspect hd [3.14, :pie, \"Apple\"]'\n",
         "!elixir -e 'IO.inspect tl [3.14, :pie, \"Apple\"]'"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -845,15 +845,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "A29_XouHXitI",
-        "outputId": "de3cea92-cfdb-4096-b031-3f64c79084be",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "de3cea92-cfdb-4096-b031-3f64c79084be"
       },
       "source": [
         "!elixir -e '[head | tail] = [3.14, :pie, \"Apple\"]; IO.inspect head; IO.inspect tail'"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -885,15 +885,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "S2QAVIgAYdN1",
-        "outputId": "825d1c1e-1eaa-418a-908e-f5c6320419d6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "825d1c1e-1eaa-418a-908e-f5c6320419d6"
       },
       "source": [
         "!elixir -e 'IO.inspect {3.14, :pie, \"Apple\"}'"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -937,6 +937,49 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "n9K3nXH0Z1pY",
+        "outputId": "aeb7ff7d-5a8d-4674-c6a0-cfc5a956a7f4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# キーワードリスト\n",
+        "!elixir -e 'IO.inspect [foo: \"bar\", hello: \"world\"]'\n",
+        "!elixir -e 'IO.inspect [{:foo, \"bar\"}, {:hello, \"world\"}]'\n",
+        "!elixir -e 'IO.inspect [foo: \"bar\", hello: \"world\"] == [{:foo, \"bar\"}, {:hello, \"world\"}]'"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[foo: \"bar\", hello: \"world\"]\n",
+            "[foo: \"bar\", hello: \"world\"]\n",
+            "true\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nCLr_RSYkJgp"
+      },
+      "source": [
+        "キーワードリストの 3 つの特徴\n",
+        "\n",
+        "* キーはアトムである。\n",
+        "* キーは順序付けされている。\n",
+        "* キーの一意性は保証されない。\n",
+        "\n",
+        "こうした理由から、キーワードリストは関数にオプションを渡すためによく用いられる。\n"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "XclysRjIZ-j8"
@@ -946,16 +989,76 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "n9K3nXH0Z1pY"
+        "id": "FTteo69skgsD"
       },
       "source": [
-        "# キーワードリスト\n",
-        "!elixir -e 'IO.inspect '"
+        "# マップ\n",
+        "\n",
+        "* キーワードリストとは違ってどんな型のキーも使える。\n",
+        "* 順序付けさない。\n",
+        "* キーの一意性が保証されている。重複したキーが追加された場合は、前の値が置き換えられる。\n",
+        "* 変数をマップのキーにできる。\n",
+        "* `%{}` 構文で定義する。\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GpcBT5UxlNqX",
+        "outputId": "a15c3fdc-37c4-41f4-8278-e98d431841ea",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!elixir -e 'IO.inspect %{:foo => \"bar\", \"hello\" => :world}'\n",
+        "!elixir -e 'map = %{:foo => \"bar\", \"hello\" => :world}; IO.inspect map[:foo]'\n",
+        "!elixir -e 'map = %{:foo => \"bar\", \"hello\" => :world}; IO.inspect map[\"hello\"]'\n",
+        "!echo\n",
+        "!elixir -e 'key = \"hello\"; IO.inspect %{key => \"world\"}'\n",
+        "!elixir -e 'IO.inspect %{:foo => \"bar\", :foo => \"hello world\"}'"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "%{:foo => \"bar\", \"hello\" => :world}\n",
+            "\"bar\"\n",
+            ":world\n",
+            "\n",
+            "%{\"hello\" => \"world\"}\n",
+            "%{foo: \"hello world\"}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nvuza7GRmeZa",
+        "outputId": "1ba6dc41-7686-4518-f243-9faa131c792b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!elixir -e 'IO.inspect %{foo: \"bar\", hello: \"world\"} == %{:foo => \"bar\", :hello => \"world\"}'"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "true\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -963,30 +1066,6 @@
         "id": "1c-WGlISZ1fo"
       },
       "source": [
-        "\n",
-        "Copy\n",
-        "iex> [foo: \"bar\", hello: \"world\"]\n",
-        "[foo: \"bar\", hello: \"world\"]\n",
-        "iex> [{:foo, \"bar\"}, {:hello, \"world\"}]\n",
-        "[foo: \"bar\", hello: \"world\"]\n",
-        "キーワードリストの重要性は次の3つの特徴によって強調づけられています:\n",
-        "\n",
-        "キーはアトムです。\n",
-        "キーは順序付けされています。\n",
-        "キーの一意性は保証されません。\n",
-        "こうした理由から、キーワードリストは関数にオプションを渡すために非常に良く用いられます。\n",
-        "\n",
-        "マップ \n",
-        "Elixirではマップは”花形の”キーバリューストアです。 キーワードリストとは違ってどんな型のキーも使え、順序付けされません。 マップは %{} 構文で定義することができます:\n",
-        "\n",
-        "Copy\n",
-        "iex> map = %{:foo => \"bar\", \"hello\" => :world}\n",
-        "%{:foo => \"bar\", \"hello\" => :world}\n",
-        "iex> map[:foo]\n",
-        "\"bar\"\n",
-        "iex> map[\"hello\"]\n",
-        ":world\n",
-        "Elixir 1.2では変数をマップのキーにすることができます:\n",
         "\n",
         "Copy\n",
         "iex> key = \"hello\"\n",
@@ -1013,7 +1092,8 @@
         "%{foo: \"bar\", hello: \"world\"}\n",
         "iex> map.hello\n",
         "\"world\"\n",
-        "マップのもう一つの興味深い特性は、マップの更新のための固有の構文があることです(注: 更新と言っていますが、新しいmapが作成されます):\n",
+        "マップのもう一つの興味深い特性は、マップの更新のための\n",
+        "固有の構文があることです(注: 更新と言っていますが、新しいmapが作成されます):\n",
         "\n",
         "Copy\n",
         "iex> map = %{foo: \"bar\", hello: \"world\"}\n",
